--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 name: SRE CI Pipeline
 
-# Trigger the pipeline on every push to the main branch
 on:
   push:
     branches: [ "main" ]
@@ -10,27 +9,22 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    defaults: 
-      run:
-        working-directory: ./sre-sandbox/app
 
     steps:
-    # 1. Check out the code from GitHub
-    - uses: actions/checkout@v3
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-    # 2. Set up Python
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
       with:
         python-version: "3.9"
 
-    # 3. Install dependencies
-    - name: Install dependencies
+    - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r app/requirements.txt
+        pip install requests httpx 
 
-    # 4. Run the Tests
-    - name: Run Tests with pytest
+    - name: Run Tests
       run: |
-        pytest
+        python -m pytest app/test_main.py
